# cairn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cairn/: __init__.py  store.py
docs/design/: DESIGN-TEMPLATE.md
docs/log/: 2026-06-30-phase-0-setup.md  2026-07-03-cairn-skeleton.md
docs/notes/: ddia-ch1.md
tests/: test_store.py
