[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn"
version = "0.0.1"
description = "Building a distributed, replicated key/value store from scratch in Python — currently a Phase 0 walking skeleton."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Zhan" }]
keywords = ["key-value-store", "raft", "distributed-systems", "storage-engine"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["cairn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
